<resources>
    <string name="app_name">简◦诗</string>
    <string name="action_settings">设置</string>
    <string name="check_updates">检查更新</string>
    <string name="favorite">我的收藏</string>
    <string name="night_mode">夜间模式</string>
    <string name="daylight_mode">白天模式</string>
    <string name="about">关于</string>

    <string name="poem_title">春江花月夜</string>
    <string name="poem_author">张若虚</string>
    <string name="poem_content">
        春江潮水连海平 海上明月共潮生 不知乘月几人归 落月摇情满江树
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_favorite">我的收藏</string>
    <string name="title_activity_developer">开发者模式</string>
    <string name="register_agreement">注册即代表同意《用户协议》</string>
    <string name="register">注册</string>
    <string name="robot_code">请输入4位验证码</string>
    <string name="hello_world">你好,世界!</string>
    <string name="life_position">有态度的生活!</string>
    <string name="extra_positon">但更需要</string>
    <string name="positions">需要态度</string>
    <string name="life">生活</string>
    <string name="Home_page">首页</string>
    <string name="setting_font_size">字体大小:               </string>
    <string name="setting_system">系统设置</string>
    <string name="cloud_upload">是否开启云端数据保存</string>
    <string name="refresh_login_page">登录页面背景自动刷新</string>
    <string name="refresh_register_page">注册页面背景自动刷新</string>
    <string name="refresh_user_page">首页背景自动刷新</string>
    <string name="refresh_poem_page">古诗背景刷新</string>
    <string name="clear_data_logout">退出清理所有数据</string>
    <string name="night_code">夜间模式</string>
    <string name="text_large">大号字体</string>
    <string name="store">保存</string>
</resources>
