<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.aboysky.androidPoem.activity.MainActivity">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/main"
        android:title="@string/Home_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_favorite"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_night_mode"
        android:orderInCategory="100"
        android:title="@string/night_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_daylight_mode"
        android:orderInCategory="100"
        android:title="@string/daylight_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_system_setting"
        android:orderInCategory="100"
        android:title="@string/setting_system"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
