<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/mainbg"
	tools:context=".activity.MainActivity"
	android:orientation="vertical"
	>


	<TextView
		android:id="@+id/text1"
		fontPath="fonts/hw.ttf"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50sp"
		android:layout_marginLeft="50sp"
		android:layout_marginTop="36dp"
		android:gravity="center_horizontal"
		android:text="@string/life"
		android:textSize="36sp"
		tools:ignore="MissingPrefix" />

	<TextView
		android:id="@+id/text2"
		fontPath="fonts/hw.ttf"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="125sp"
		android:layout_marginLeft="126sp"
		android:gravity="center_horizontal"
		android:text="@string/positions"
		android:textSize="36sp"
		tools:ignore="MissingPrefix" />

	<TextView
		android:id="@+id/text3"
		fontPath="fonts/hw.ttf"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="50sp"
		android:layout_marginLeft="100sp"
		android:gravity="center_horizontal"
		android:text="@string/extra_positon"
		android:textSize="36sp"
		tools:ignore="MissingPrefix" />

	<TextView
		android:id="@+id/text4"
		fontPath="fonts/hw.ttf"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="125sp"
		android:layout_marginLeft="126sp"
		android:gravity="center_horizontal"
		android:text="@string/life_position"
		android:textSize="36sp"
		tools:ignore="MissingPrefix" />

	<Button
		android:id="@+id/bt_main_login"
		android:textSize="26sp"
		fontPath="fonts/hw.ttf"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="65dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:background="@color/colorAccent"
		android:text="登录"
		android:textColor="#fff"
		android:gravity="center"
		android:onClick="onClick"
		tools:ignore="MissingPrefix" />
	<Button
		android:id="@+id/bt_main_register"
		android:textSize="26sp"
		android:layout_width="200dp"
		fontPath="fonts/hw.ttf"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="40dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:background="@color/colorAccent"
		android:text="注册"
		android:textColor="#fff"
		android:gravity="center"
		android:onClick="onClick"
		tools:ignore="MissingPrefix" />


</LinearLayout>