<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/coordinatorLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activity.PoemActivity"
		android:theme="@style/AppTheme">

	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<com.google.android.material.appbar.CollapsingToolbarLayout
				android:id="@+id/ctl_toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fitsSystemWindows="true"
				app:contentScrim="?attr/colorPrimary"
				app:expandedTitleMarginEnd="64dp"
				app:expandedTitleMarginStart="48dp"
				app:layout_scrollFlags="scroll|exitUntilCollapsed"
				app:title="@string/app_name">

			<!--app:statusBarScrim="?attr/colorPrimaryDark"-->


			<ImageView
					android:id="@+id/iv_header"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:contentDescription="TODO"
					android:fitsSystemWindows="false"
					android:src="@mipmap/header"
					app:layout_collapseMode="parallax"
					app:layout_collapseParallaxMultiplier="0.7" />

			<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:layout_collapseMode="pin"
					app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
					app:title="@string/app_name" />

		</com.google.android.material.appbar.CollapsingToolbarLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
			android:id="@+id/sv_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_marginBottom="30dp"
			android:focusableInTouchMode="true"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center_horizontal"
				android:orientation="vertical">

			<TextView
					android:id="@+id/tv_title"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:text="@string/poem_title"
					android:textAlignment="center"
					android:textIsSelectable="true"
					android:textSize="22sp" android:gravity="center_horizontal"/>

			<TextView
					android:id="@+id/tv_author"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:text="@string/poem_author"
					android:textAlignment="center"
					android:textIsSelectable="true"
					android:textSize="16sp" android:gravity="center_horizontal"/>

			<TextView
					android:id="@+id/tv_content"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:lineSpacingExtra="8dp"
					android:nestedScrollingEnabled="true"
					android:text="@string/poem_content"
					android:textAlignment="center"
					android:textIsSelectable="true"
					android:textSize="18sp" android:gravity="center_horizontal"/>


		</LinearLayout>


	</ScrollView>


	<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/fab_refresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end"
			android:layout_margin="@dimen/fab_margin"
			app:srcCompat="@android:drawable/ic_popup_sync" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/fab_favorite"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_margin="@dimen/fab_margin"
			app:srcCompat="@android:drawable/btn_star" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>